checking recommended service error